--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <section id="gameScreen">
         <div id="scoreBoard">
-          <span id="gbPlayerName">Samikannu P</span>
+          <span id="gbPlayerName">Vignesh D Raj</span>
           <div class="score-banner">
             <h4>Score</h4>
             <span id="score">01</span>
